--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,19 @@
 <div class="container">
+  <app-cockpit (serverCreated)="onServerAdded($event)" (onBpCreated)="onBlueprintAdded($event)"></app-cockpit>
+  <hr>
   <div class="row">
-    <div class="col-md-12">
-      <h1>This is {{title}}</h1>
-      <hr>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-md-12">
-      <app-servers></app-servers>
+    <div class="col-xs-12">
+      <button class="btn btn-primary" (click)="onChangeFirst()">Change first element</button>
+      <button class="btn btn-danger" (click)="onDestroyFirst()">Destroy first component</button>
+
+      <app-server-element *ngFor="let serverElement of serverElements" [srvElement]="serverElement" [name]="serverElement.name">
+        <p>
+          <strong *ngIf="serverElement.type === 'server'" style="color: red">{{serverElement.content}}
+            <em *ngIf="serverElement.type === 'blueprint'">{{serverElement.content }}</em>
+          </strong>
+        </p>
+      </app-server-element>
+
     </div>
   </div>
 </div>
